@@ -1,3 +1,10 @@
+2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* IPhoneProject.cs: When executing a device configuration,
+	  upload the app.
+
+	* IPhoneCommands.cs: Dispose the uploader process.
+
 2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* IPhoneProject.cs:
