@@ -1,3 +1,8 @@
+2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* IPhoneDebuggerSession.cs: Don't upload, since the project
+	  does this now.
+
 2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* IPhoneSoftDebuggerEngine.cs: Set UserAssemblyPaths.
